@@ -1,3 +1,7 @@
+2020-05-06  Sam Varshavchik  <mrsam@courier-mta.com>
+
+	* listlayoutmanager: Home/End in a list navigation.
+
 2020-05-03  Sam Varshavchik  <mrsam@courier-mta.com>
 
 	* includes/x/w/shortcut.H: Improve shortcut labeling.
